<resources>
    <string name="app_name">MovieCatalog</string>
    <string name="sign_in_text">Войти в аккаунт</string>
    <string name="sign_up_text">Зарегистрироваться</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="confirm_login_text">Войти</string>
    <string name="sign_in_panel_text">Вход в аккаунт</string>

    <string name="sign_up_panel_text">Регистрация</string>
    <string name="email_hint">Электронная почта</string>
    <string name="name_hint">Имя</string>
    <string name="confirm_password_hint">Подтвердите пароль</string>
    <string name="birthday_hint">Дата рождения</string>
    <string name="male_hint">Мужчина</string>
    <string name="female_hint">Женщина</string>
    <string name="confirm_sign_up_text">Зарегистрироваться</string>

    <string name="return_to_welcome_screen_description">Return to welcome screen</string>

    <string name="welcome_text">Добро пожаловать в movieCatalog</string>
    <string name="personal_information_hint">Личная информация</string>
    <string name="good_morning_text">Доброе утро,</string>
    <string name="profile_icon_description">Profile icon</string>
    <string name="sign_out_button_description">Sign out button</string>
    <string name="watch_button_text">Смотреть</string>
    <string name="navigation_feed_text">Лента</string>
    <string name="navigation_movies_text">Фильмы</string>
    <string name="navigation_lbrary_text">Избранное</string>
    <string name="navigation_profile_text">Профиль</string>
    <string name="random_movie_button_text">Случайный фильм</string>
    <string name="all_movies_text">Все фильмы</string>
    <string name="movie_poster">Movie poster</string>
    <string name="friend_avatar">Friend avatar</string>
    <string name="friends_amount">Нравится %1$s вашим друзьям</string>
    <string name="rating">Рейтинг</string>
    <string name="movie_catalog_rating">Movie catalog rating</string>
    <string name="kinopoisk_rating">Kinopoisk rating</string>
    <string name="imdb_rating">IMDb rating</string>
    <string name="information_panel">Информация</string>
    <string name="information_countries">Страны</string>
    <string name="information_age">Возраст</string>
    <string name="information_durability">Время</string>
    <string name="information_release_year">Год выхода</string>
    <string name="information_director">Режиссёр</string>
    <string name="director_photo_description">Director photo</string>
    <string name="information_genres">Жанры</string>
    <string name="information_finance">Финансы</string>
    <string name="information_budget">Бюджет</string>
    <string name="information_income">Сборы в мире</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <string name="unnamed">Нет названия</string>
    <string name="return_to_movies_screen">Return to movies screen</string>
    <string name="favorites">Избранное</string>
    <string name="favorite_genres">Любимые жанры</string>
    <string name="favorite_movies">Любимые фильмы</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="add_movie_to_favorites_button">Add movie to favorites button</string>
    <string name="reviews">Отзывы</string>
    <string name="user_s_avatar">User\'s avatar</string>
    <string name="add_review">Добавить отзыв</string>
    <string name="left_review">Left Review</string>
    <string name="right_review">Right review</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="return_to_profile_screen">Return to profile screen</string>
    <string name="friends">Мои друзья</string>
    <string name="my_friends">Мои друзья</string>
    <string name="delete_friend">Delete friend</string>
    <string name="favorite_movies_recycler">Мне нравится</string>
    <string name="all">Все</string>
    <string name="favorites_empty">Здесь пока пусто</string>
    <string name="empty_favorites_tip">Добавьте любимые жанры и фильмы, чтобы вернуться к ним позже</string>
    <string name="find_movie_button_text">Найти фильм для себя</string>
    <string name="not_equal_passwords">Пароль должен совпадать!</string>
    <string name="no_login">Логин - обязательное поле!</string>
    <string name="no_name">Имя - обязательное поле!</string>
    <string name="no_birthday">Дата рождения - обязательное поле!</string>
    <string name="small_password">Пароль слишком маленький!</string>
    <string name="good_morning">Доброе утро,</string>
    <string name="good_afternoon">Добрый день,</string>
    <string name="good_evening">Добрый вечер,</string>
    <string name="good_night">Доброй ночи,</string>
    <string name="anonimus_review">Анонимный отзыв</string>
    <string name="send">Отправить</string>
    <string name="rating_score">Оценка</string>
    <string name="add_review_button">Добавить отзыв</string>
    <string name="no_password">Пароль - обязательное поле!</string>
    <string name="wrong_email">Неправильный формат почты</string>

</resources>