<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.presentation.ui.activity.MainActivity"
    android:background="@color/dark">

    <LinearLayout
        android:id="@+id/navigationPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/dark_button"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/feedNavigation"
            style="@style/BottomNavigationItem">

            <View
                style="@style/BottomNavigtaionIcon"
                android:background="@drawable/feed"/>
            <TextView
                style="@style/BottomNavigationText"
                android:text="@string/navigation_feed_text"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/moviesNavigation"
            style="@style/BottomNavigationItem">

            <View
                style="@style/BottomNavigtaionIcon"
                android:background="@drawable/movies"/>
            <TextView
                style="@style/BottomNavigationText"
                android:text="@string/navigation_movies_text"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/libraryNavigation"
            style="@style/BottomNavigationItem">

            <View
                style="@style/BottomNavigtaionIcon"
                android:background="@drawable/library"/>
            <TextView
                style="@style/BottomNavigationText"
                android:text="@string/navigation_lbrary_text"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profileNavigation"
            style="@style/BottomNavigationItem">

            <View
                style="@style/BottomNavigtaionIcon"
                android:background="@drawable/profile"/>
            <TextView
                style="@style/BottomNavigationText"
                android:text="@string/navigation_profile_text"/>

        </LinearLayout>

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/navigationScreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/navigationPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_profile" />


</androidx.constraintlayout.widget.ConstraintLayout>