<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragment.SignInFragment">
    
    <ImageView
        android:id="@+id/topShadow"
        android:layout_width="match_parent"
        android:layout_height="434dp"
        android:src="@drawable/welcome_screen_shadow"
        android:rotation="180"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/bottomShadow"
            android:layout_width="match_parent"
            android:layout_height="314dp"
            android:src="@drawable/welcome_screen_shadow"
            android:rotation="0"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="264dp"
            android:background="@color/dark"/>

    </LinearLayout>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signInScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/welcomeScreen"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <LinearLayout
            android:id="@+id/signInPanel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/return_from_sign_in_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/dark_button"
                android:contentDescription="@string/return_to_welcome_screen_description"
                android:src="@drawable/chevron_left"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:fontFamily="@font/manrope_bold"
                android:gravity="center_vertical"
                android:text="@string/sign_in_panel_text"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/confirm_login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/loginField"
                style="@style/InputTextView.Welcome"
                android:hint="@string/login_hint"
                android:layout_marginBottom="8dp"
                android:inputType="text"
                android:autofillHints="" />

            <EditText
                android:id="@+id/passwordField"
                style="@style/InputTextView.Welcome"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:autofillHints=""/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_login_button"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@drawable/dark_button"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:layout_marginBottom="48dp"
            android:text="@string/confirm_login_text"
            android:textColor="@color/gray_faded"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/manrope_bold"
            android:textSize="14sp"
            android:letterSpacing="0.0071"
            android:textAllCaps="false"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>