<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.activity.ProfileActivity"
    android:background="@color/dark">

    <ImageView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:src="@drawable/profile_head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:src="@drawable/welcome_screen_shadow"
        app:layout_constraintBottom_toBottomOf="@+id/head" />

    <ImageView
        android:id="@+id/navigationPanel"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/dark_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/navigationPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/profileHead"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginBottom="35dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profileAvatar"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/profile_icon_description"
                android:src="@drawable/default_profile_icon" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/welcomeWords"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:fontFamily="@font/manrope"
                    android:gravity="center_vertical"
                    android:text="@string/good_morning_text"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/welcomeName"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:fontFamily="@font/manrope_bold"
                    android:gravity="center_vertical"
                    android:text="Васечка Пупкин"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/logOutButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/dark_button"
                android:contentDescription="@string/sign_out_button_description"
                android:src="@drawable/sign_out" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/infoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/personaInformationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/personal_information_hint"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/HintTextView"
                            android:text="@string/login_hint" />

                        <TextView
                            android:id="@+id/loginText"
                            style="@style/InputTextView"
                            android:text="@string/login_hint" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/HintTextView"
                            android:text="@string/email_hint" />

                        <TextView
                            android:id="@+id/emailText"
                            style="@style/InputTextView"
                            android:text="@string/email_hint" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/HintTextView"
                            android:text="@string/name_hint" />

                        <TextView
                            android:id="@+id/nameText"
                            style="@style/InputTextView"
                            android:text="@string/name_hint" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/HintTextView"
                            android:text="@string/birthday_hint" />

                        <TextView
                            android:id="@+id/birthdateText"
                            style="@style/InputTextView"
                            android:text="@string/birthday_hint" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/HintTextView"
                            android:text="Пол" />

                        <TextView
                            android:id="@+id/genderText"
                            style="@style/InputTextView"
                            android:text="Пол" />

                    </LinearLayout>
                </LinearLayout>

            </ScrollView>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>